[Fix] Add bottom spacing in konnectors modal

--- a/client/app/styles/index.styl
+++ b/client/app/styles/index.styl
@@ -185,7 +185,8 @@ aside
 
             .account-connection
                 > div
-                    width 50%
+                    width          50%
+                    padding-bottom 2em
 
             .account-management
                 width  70%
